--- a/resources/css/markdown.css
+++ b/resources/css/markdown.css
@@ -47,3 +47,7 @@
 .markdown-styles > .code-toolbar {
     margin-bottom: 20px;
 }
+.markdown-styles > p > img {
+    margin-left: auto;
+    margin-right: auto;
+}
